edit file for add components and edit css file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="food store" />
     <title>food store</title>
     <!-- file css -->
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <!-- font Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,17 +15,9 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <!-- menu -->
-    <nav class="toolbar nav-link">
-      <p class="logo set-font">BURGER HEAVEN</p>
-      <ul class="menu nav-link">
-        <li><a href="#" class="items set-font">ABOUT</a></li>
-        <li><a href="#" class="items set-font">MENU</a></li>
-        <li><a href="#" class="order set-font">ORDER ONLINE</a></li>
-      </ul>
-    </nav>
+    <menu-site></menu-site>
     <!-- text title -->
     <section id="box_title">
       <h1 class="title set-font">NEW YORK'S</h1>
@@ -113,6 +105,6 @@
         <p id="pr-po">Privacy Policy</p>
       </div>
     </footer>
-    <script src="/js/script.js"></script>
+    <script type="module" src="/js/script.js"></script>
   </body>
 </html>
