--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
       href="https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap"
       rel="stylesheet"
     />
+     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart"
+    />
   </head>
   <body>
     <!-- menu -->
     <menu-site></menu-site>
+
     <!-- text title -->
     <section id="box_title">
       <h1 class="title set-font">NEW YORK'S</h1>
