--- a/index.html
+++ b/index.html
@@ -14,102 +14,103 @@
       href="https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap"
       rel="stylesheet"
     />
-     <link
+    <!-- icon -->
+    <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
   </head>
   <body>
     <!-- menu -->
-    <menu-site></menu-site>
+      <menu-site></menu-site>
 
-    <!-- text title -->
-    <section id="box_title">
-      <h1 class="title set-font">NEW YORK'S</h1>
-      <h1 class="title set-font">FAVORITE ORGANIC</h1>
-      <h1 class="title set-font">HAMBURGER JOINT</h1>
-    </section>
-    <img src="/img/Burgers.png" alt="Burger" id="img_burger" />
-    <!-- box about us -->
-    <div id="box_about">
-      <div id="title_box_about">
-        <p id="title_about">THE BURGER ABOVE ALL BURGERS</p>
-      </div>
-      <div id="text_about">
-        <p class="about-decription">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec
-          ornare neque.
-        </p>
-        <a href="#" class="items about">ABOUT US</a>
-      </div>
-    </div>
-    <!-- list food -->
-    <div id="parent_box">
-      <div>
-        <img src="/img/Rectangle 16.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
+      <!-- text title -->
+      <section id="box_title">
+        <h1 class="title set-font">NEW YORK'S</h1>
+        <h1 class="title set-font">FAVORITE ORGANIC</h1>
+        <h1 class="title set-font">HAMBURGER JOINT</h1>
+      </section>
+      <img src="/img/Burgers.png" alt="Burger" id="img_burger" />
+      <!-- box about us -->
+      <div id="box_about">
+        <div id="title_box_about">
+          <p id="title_about">THE BURGER ABOVE ALL BURGERS</p>
+        </div>
+        <div id="text_about">
+          <p class="about-decription">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec
+            ornare neque.
+          </p>
+          <a href="#" class="items about">ABOUT US</a>
         </div>
       </div>
-      <div>
-        <img src="/img/Rectangle 17.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
-        </div>
-      </div>
-      <div>
-        <img src="/img/Rectangle 16.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
-        </div>
-      </div>
-      <div>
-        <img src="/img/Rectangle 17.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
-        </div>
-      </div>
-    </div>
-    <h1 id="text-center-site">the best burger i’ve ever had</h1>
-    <img src="/img/fr.png" alt="friends" id="img-friends" />
-    <footer>
-      <div class="foot-box">
-        <p class="title-foot">Burger Heaven</p>
-        <p>Copyright Burger Heaven</p>
-      </div>
-      <div class="foot-box">
-        <p class="title-foot">more</p>
-        <ul>
-          <li><a href="#">About</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Menu</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Location</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Privacy</a></li>
-        </ul>
-      </div>
-      <div id="box-time">
-        <p class="title-foot">Hours</p>
-        <p>Open from</p>
-        <p>11AM to</p>
-        <p>11PM daily</p>
-      </div>
-      <div class="foot-box">
+      <!-- list food -->
+      <div id="parent_box">
         <div>
-          <p class="title-foot">Join Our Newsletter</p>
-          <button id="join-btn">SUBMIT</button>
+          <img src="/img/Rectangle 16.png" alt="ham" />
+          <div class="box1">
+            <p>SALT & VINEGAR FRENCH FRIES</p>
+            <a href="#">ORDER ONLINE</a>
+          </div>
         </div>
-        <p id="pr-po">Privacy Policy</p>
+        <div>
+          <img src="/img/Rectangle 17.png" alt="ham" />
+          <div class="box1">
+            <p>SALT & VINEGAR FRENCH FRIES</p>
+            <a href="#">ORDER ONLINE</a>
+          </div>
+        </div>
+        <div>
+          <img src="/img/Rectangle 16.png" alt="ham" />
+          <div class="box1">
+            <p>SALT & VINEGAR FRENCH FRIES</p>
+            <a href="#">ORDER ONLINE</a>
+          </div>
+        </div>
+        <div>
+          <img src="/img/Rectangle 17.png" alt="ham" />
+          <div class="box1">
+            <p>SALT & VINEGAR FRENCH FRIES</p>
+            <a href="#">ORDER ONLINE</a>
+          </div>
+        </div>
       </div>
-    </footer>
+      <h1 id="text-center-site">the best burger i’ve ever had</h1>
+      <img src="/img/fr.png" alt="friends" id="img-friends" />
+      <footer>
+        <div class="foot-box">
+          <p class="title-foot">Burger Heaven</p>
+          <p>Copyright Burger Heaven</p>
+        </div>
+        <div class="foot-box">
+          <p class="title-foot">more</p>
+          <ul>
+            <li><a href="#">About</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Menu</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Location</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Privacy</a></li>
+          </ul>
+        </div>
+        <div id="box-time">
+          <p class="title-foot">Hours</p>
+          <p>Open from</p>
+          <p>11AM to</p>
+          <p>11PM daily</p>
+        </div>
+        <div class="foot-box">
+          <div>
+            <p class="title-foot">Join Our Newsletter</p>
+            <button id="join-btn">SUBMIT</button>
+          </div>
+          <p id="pr-po">Privacy Policy</p>
+        </div>
+      </footer>
     <script type="module" src="/js/script.js"></script>
   </body>
 </html>
