add components product

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p id="title_about">THE BURGER ABOVE ALL BURGERS</p>
       </div>
       <div id="text_about">
-        <p class="about-decription">
+        <p class="about-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec
           ornare neque.
         </p>
@@ -48,35 +48,12 @@
     </div>
     <!-- list food -->
     <div id="parent_box">
-      <div>
-        <img src="/img/Rectangle 16.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
-        </div>
-      </div>
-      <div>
-        <img src="/img/Rectangle 17.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
-        </div>
-      </div>
-      <div>
-        <img src="/img/Rectangle 16.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
-        </div>
-      </div>
-      <div>
-        <img src="/img/Rectangle 17.png" alt="ham" />
-        <div class="box1">
-          <p>SALT & VINEGAR FRENCH FRIES</p>
-          <a href="#">ORDER ONLINE</a>
-        </div>
-      </div>
+      <product-site src="/img/Rectangle 16.png"></product-site>
+      <product-site src="/img/Rectangle 17.png"></product-site>
+      <product-site src="/img/Rectangle 16.png"></product-site>
+      <product-site src="/img/Rectangle 17.png"></product-site>
     </div>
+
     <h1 id="text-center-site">the best burger i’ve ever had</h1>
     <img src="/img/fr.png" alt="friends" id="img-friends" />
     <footer>
