--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <h1 id="text-center-site">the best burger i’ve ever had</h1>
     <img src="/img/fr.png" alt="friends" id="img-friends" />
-    <footer-site></footer-site
+    <footer-site></footer-site>
     <script type="module" src="/js/script.js"></script>
   </body>
 </html>
