--- a/order.html
+++ b/order.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>food store</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
     <!-- font Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,10 +19,26 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
       crossorigin="anonymous"
     />
-</head>
-<body>
+  </head>
+  <body>
     <menu-site></menu-site>
-    
+    <img src="./img/pizza-order1.png" alt="pizza one" class="order-pizza" />
+    <input type="button" value="ADD TO CART" class="add-to-cart" />
+    <div class="box-select-pizza">
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+    </div>
     <script type="module" src="./js/script.js"></script>
-</body>
+  </body>
 </html>
