--- a/order.html
+++ b/order.html
@@ -23,7 +23,8 @@
   <body>
     <menu-site></menu-site>
     <img src="./img/pizza-order1.png" alt="pizza one" class="order-pizza" />
-    <input type="button" value="ADD TO CART" class="add-to-cart" />
+    <div class="box-order">
+      <input type="button" value="Add" class="add-to-cart set-font" />
     <div class="box-select-pizza">
       <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
       <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
@@ -38,6 +39,7 @@
       <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
       <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
       <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
+    </div>
     </div>
     <script type="module" src="./js/script.js"></script>
   </body>
