add order.js for write script for page order and add change pizza this page

--- a/order.html
+++ b/order.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <menu-site></menu-site>
-    <img src="./img/pizza-order1.png" alt="pizza one" class="order-pizza" />
+    <img src="./img/pizza-order1.png" alt="pizza" class="order-pizza" />
     <div class="box-order">
       <input type="button" value="Add" class="add-to-cart set-font" />
     <div class="box-select-pizza">
@@ -42,5 +42,6 @@
     </div>
     </div>
     <script type="module" src="./js/script.js"></script>
+    <script src="./js/order.js"></script>
   </body>
 </html>
