--- a/order.html
+++ b/order.html
@@ -24,22 +24,78 @@
     <menu-site></menu-site>
     <img src="./img/pizza-order1.png" alt="pizza" class="order-pizza" />
     <div class="box-order">
-      <input type="button" value="Add" class="add-to-cart set-font" />
-    <div class="box-select-pizza">
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-      <img src="./img/pizza-order1.png" alt="pizza one" class="select-pizza" />
-    </div>
+      <input
+        type="button"
+        value="Add"
+        class="add-to-cart set-font"
+      />
+      <div class="box-select-pizza">
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+        <img
+          src="./img/pizza-order1.png"
+          alt="pizza one"
+          class="select-pizza"
+        />
+      </div>
     </div>
     <script type="module" src="./js/script.js"></script>
     <script src="./js/order.js"></script>
